LMS-demo/force-app/main/default/objects/Hero_Employee__c/fields/empAddr__c.field-meta.xml
<CustomField>
    <fullName>empAddr__c</fullName>
    <label>Employee Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>