LMS-demo/force-app/main/default/objects/Hero_Employee__c/fields/empDept__c.field-meta.xml
<CustomField>
    <fullName>empDept__c</fullName>
    <label>Employee Dept</label>
    <length>100</length>
    <type>Text</type>
</CustomField>