LMS-demo/force-app/main/default/objects/Hero_Employee__c/fields/empFName__c.field-meta.xml
<CustomField>
    <fullName>empFName__c</fullName>
    <label>Employee Father&apos;s name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>