LMS-demo/force-app/main/default/objects/Hero_Employee__c/fields/empSalary__c.field-meta.xml
<CustomField>
    <fullName>empSalary__c</fullName>
    <label>Employee Salary</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>